Save 10 last generated passwords

--- a/index.html
+++ b/index.html
@@ -12,47 +12,68 @@
     <title>PassGen</title>
   </head>
   <body>
-    <div class="container">
-      <h2 class="header">Password Generator</h2>
-      <div class="divider"></div>
-      <div class="inputBox">
-        <input type="text" disabled />
-        <span class="material-icons copyIcon">copy_all</span>
-      </div>
-      <div class="passIndicator"></div>
-      <div class="passLength">
-        <div class="lenContainer">
-          <label for="length" class="label">Password Length</label>
-          <span class="length">15</span>
+    <div class="wrapper">
+      <h1 class="header">Password Generator</h1>
+      <div class="tab-wrap">
+        <!-- active tab on page load gets checked attribute -->
+        <input type="radio" id="tab1" name="tabGroup1" class="tab" checked />
+        <label for="tab1">Generate Password</label>
+
+        <input type="radio" id="tab2" name="tabGroup1" class="tab" />
+        <label for="tab2">History</label>
+
+        <div class="tab__content">
+          <div class="inputBox">
+            <input type="text" disabled />
+            <span id="copyBtn" class="material-icons copyIcon">copy_all</span>
+          </div>
+          <div class="passIndicator"></div>
+          <div class="passLength">
+            <div class="lenContainer">
+              <label for="length" class="label">Password Length</label>
+              <span class="length">15</span>
+            </div>
+            <input type="range" min="1" max="30" step="1" />
+          </div>
+          <div class="passSettings">
+            <label class="label">Password Settings</label>
+            <ul class="options">
+              <li class="option">
+                <input type="checkbox" id="lowercase" checked />
+                <label for="lowercase">Lowercase (a-z)</label>
+              </li>
+              <li class="option">
+                <input type="checkbox" id="uppercase" />
+                <label for="uppercase">Uppercase (A-Z)</label>
+              </li>
+              <li class="option">
+                <input type="checkbox" id="numbers" />
+                <label for="numbers">Numbers (0-9)</label>
+              </li>
+              <li class="option">
+                <input type="checkbox" id="specialChars" />
+                <label for="specialChars">Symbols (!@#)</label>
+              </li>
+              <li class="option">
+                <input type="checkbox" id="excDuplicate" />
+                <label for="excDuplicate">Exclude Duplicate</label>
+              </li>
+            </ul>
+          </div>
+          <button class="btn">Generate Password</button>
         </div>
-        <input type="range" min="1" max="30" step="1" />
+
+        <div class="tab__content">
+          <h2>Last 10 Passwords</h2>
+          <p id="emptyListMsg" class="emptyListMsg">
+            10 Last generated passwords will be shown here.
+          </p>
+          <ul class="passList" id="passwordList"></ul>
+          <button id="clearPasswordBtn" class="btn clear-btn">
+            Clear History
+          </button>
+        </div>
       </div>
-      <div class="passSettings">
-        <label class="label">Password Settings</label>
-        <ul class="options">
-          <li class="option">
-            <input type="checkbox" id="lowercase" checked />
-            <label for="lowercase">Lowercase (a-z)</label>
-          </li>
-          <li class="option">
-            <input type="checkbox" id="uppercase" />
-            <label for="uppercase">Uppercase (A-Z)</label>
-          </li>
-          <li class="option">
-            <input type="checkbox" id="numbers" />
-            <label for="numbers">Numbers (0-9)</label>
-          </li>
-          <li class="option">
-            <input type="checkbox" id="specialChars" />
-            <label for="specialChars">Symbols (!@#)</label>
-          </li>
-          <li class="option">
-            <input type="checkbox" id="excDuplicate" />
-            <label for="excDuplicate">Exclude Duplicate</label>
-          </li>
-        </ul>
-      </div>
-      <button class="btn">Generate Password</button>
     </div>
   </body>
 </html>
